feat: split wake phrase and command playback with configurable delay/speed

--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,11 @@ ENABLE_PLAYBACK=true
 # Default voice for Orpheus TTS
 DEFAULT_VOICE=troy
 
+# Default speech speed for wake+command audio
+DEFAULT_SPEED=0.9
+
+# Delay after wake phrase before command playback (ms)
+WAKE_DELAY_MS=2500
+
 # Port to run the server on
 PORT=3000
