feat: add optional pre-pause and system volume adjustment before trigger playback

--- a/.env.example
+++ b/.env.example
@@ -13,5 +13,11 @@ DEFAULT_SPEED=0.9
 # Delay after wake phrase before command playback (ms)
 WAKE_DELAY_MS=2500
 
+# Optional pause before any playback starts (ms)
+PRE_PAUSE_MS=0
+
+# Optional pre-playback system volume (0-100)
+PRE_VOLUME=
+
 # Port to run the server on
 PORT=3000
