chore: default GITA voice to daniel (professional male)

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ GROQ_API_KEY=your_groq_api_key_here
 ENABLE_PLAYBACK=true
 
 # Default voice for Orpheus TTS
-DEFAULT_VOICE=troy
+DEFAULT_VOICE=daniel
 
 # Default speech speed for wake+command audio
 DEFAULT_SPEED=0.9
