feat: add standalone duplex + flow engine to GITA

--- a/.env.example
+++ b/.env.example
@@ -19,5 +19,11 @@ PRE_PAUSE_MS=0
 # Optional pre-playback system volume (0-100)
 PRE_VOLUME=
 
+# Optional Groq STT model for duplex transcription
+GROQ_STT_MODEL=whisper-large-v3-turbo
+
+# macOS ffmpeg avfoundation input selector (default mic is usually :0)
+MIC_INPUT=:0
+
 # Port to run the server on
 PORT=3000
