chore(ops): Harden security, add docker healthchecks, secret scan, headless docs, and CI/smoke tests

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,16 @@
-# Groq API Key for TTS (Orpheus)
+# TTS provider: groq | voicebox
+TTS_PROVIDER=voicebox
+
+# Groq API Key for TTS (Orpheus) (used when TTS_PROVIDER=groq)
 GROQ_API_KEY=your_groq_api_key_here
+
+# Voicebox local API settings (used when TTS_PROVIDER=voicebox)
+VOICEBOX_URL=http://127.0.0.1:17493
+VOICEBOX_PROFILE_ID=
+VOICEBOX_MODEL_SIZE=0.6B
+# Optional safety fallback if 0.6B fails to load on your install
+VOICEBOX_FALLBACK_MODEL_SIZE=1.7B
+VOICEBOX_LANGUAGE=en
 
 # Enable playing audio using ffplay
 ENABLE_PLAYBACK=true
