--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js", "desktop": "node desktop.js"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
